openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-book-store
  labels:
    app: random-book-store
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: random-book-store
