openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: random-book-store
  labels:
    app: random-book-store
spec:
  to:
    kind: Service
    name: random-book-store
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
